# graph-rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyrightconfig.json  tailwind.config.js
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/scripts/: modal_worker.py
backend/src/: __main__.py  api.py  arxiv.py  config.py  embedder.py  factories.py  graph_store.py  models.py  pipeline.py  queuing.py  server.py  vector_store.py  worker.py
backend/src/pipeline/: discovery.py  pipeline.py  semantic.py
backend/src/store/: __init__.py  core.py  graph.py  index.py  models.py  redis.py  test_index.py  vector.py
backend/tests/: test_index.py  test_pipeline.py  test_queuing.py  test_worker.py
frontend/: Dockerfile  index.html  nginx.default.conf  package.json  pyproject.toml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: GraphView.tsx  ListView.tsx  PaperNode.tsx  SearchBar.tsx
frontend/src/types/: index.ts
infra/: compose.gpu.yml  compose.yml
infra/app/: .env.example
infra/fly/qdrant/: README.md  fly.toml
infra/qdrant/: .env.example  fly.toml
infra/qdrant-fly/: README.md
infra/qdrant/data/: raft_state.json
src/api/: client.ts
src/components/: GraphView.tsx  ListView.tsx  SearchBar.tsx
