[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connor", email = "11376396+Viibrant@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "loguru>=0.7.3",
    "mcp[cli]>=1.4.1",
    "numpy>=2.2.4",
    "poethepoet>=0.33.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.0.2",
]

[project.scripts]
backend = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=6.1.1"]

[tool.poe.tasks]
pipeline = "python src/"
server = "uvicorn src.server:app"
test = "pytest"
