[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connor", email = "11376396+Viibrant@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "loguru>=0.7.3",
    "mcp[cli]>=1.4.1",
    "numpy>=2.2.4",
    "poethepoet>=0.33.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.13.3",
    "sentence-transformers>=4.0.2",
    "upstash-redis>=1.4.0",
]

[project.scripts]
backend = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
]

[tool.poe.tasks]
pipeline = "python src/"
server = "uvicorn src.server:app"
test = "pytest"
format = "ruff format"
typecheck = "mypy --strict --ignore-missing-imports src/"
lint = "ruff check ."

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["backend/tests"]

[tool.mypy]
python_version = "3.12"
strict = true
