[project]
name = "frontend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Connor", email = "11376396+Viibrant@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
frontend = "frontend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
